--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -8,18 +8,65 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="134dp"
-        android:layout_height="134dp"
-        app:srcCompat="@drawable/img"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="66dp" />
+        android:layout_width="173dp"
+        android:layout_height="125dp"
+        android:layout_marginTop="66dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img" />
 
     <Button
         android:id="@+id/Inicio"
         android:layout_width="136dp"
-        android:layout_height="44dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="135dp"
         android:background="@drawable/btn_bg"
         android:text="Iniciar Sesión"
-        tools:layout_editor_absoluteX="137dp"
-        tools:layout_editor_absoluteY="552dp" />
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="273dp"
+        android:text="¡Hola! Gusto en verte"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/Inicio"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¿Olvidaste tu contraseña?"
+        tools:layout_editor_absoluteX="74dp"
+        tools:layout_editor_absoluteY="624dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¿No tienes una cuenta?"
+        tools:layout_editor_absoluteX="72dp"
+        tools:layout_editor_absoluteY="651dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Registrate aqui"
+        android:textColor="#C61438"
+        tools:layout_editor_absoluteX="224dp"
+        tools:layout_editor_absoluteY="651dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
