--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -3,5 +3,5 @@
 
     <solid android:color="#E91E47">
     </solid>
-    <corners android:radius="40"></corners>
+    <corners android:radius="30dip"></corners>
 </shape>
