--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Iniciar_sesion">
-
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
@@ -34,8 +33,8 @@
 
     <Button
         android:id="@+id/Inicio"
-        android:layout_width="134dp"
-        android:layout_height="0dp"
+        android:layout_width="127dp"
+        android:layout_height="55dp"
         android:layout_marginBottom="36dp"
         android:background="@drawable/btn_bg"
         android:text="Iniciar Sesión"
@@ -43,7 +42,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/ContrasenaIS" />
 
     <TextView
         android:id="@+id/textView"
@@ -100,27 +99,28 @@
         android:layout_marginEnd="88dp"
         android:text="Correo Eléctronico"
         android:textColor="#C61438"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
+        app:layout_constraintBottom_toTopOf="@+id/CorreoIS"
         app:layout_constraintEnd_toEndOf="@+id/textView12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="222dp"
-        android:layout_height="0dp"
+        android:id="@+id/ContrasenaIS"
+        android:layout_width="241dp"
+        android:layout_height="41dp"
         android:layout_marginBottom="37dp"
         android:ems="10"
         android:inputType="textPassword"
+        app:passwordToggleEnabled = "true"
         app:layout_constraintBottom_toTopOf="@+id/Inicio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/CorreoIS"
+        android:layout_width="226dp"
+        android:layout_height="48dp"
         android:layout_marginStart="2dp"
         android:layout_marginBottom="33dp"
         android:ems="10"
@@ -135,8 +135,8 @@
         android:layout_height="wrap_content"
         android:text="Contraseña"
         android:textColor="#C61438"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />
+        app:layout_constraintBottom_toTopOf="@+id/ContrasenaIS"
+        app:layout_constraintStart_toStartOf="@+id/ContrasenaIS"
+        app:layout_constraintTop_toBottomOf="@+id/CorreoIS" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
