--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -56,11 +56,11 @@
         android:layout_marginBottom="22dp"
         android:text="Correo Eléctronico"
         android:textColor="#C61438"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintBottom_toTopOf="@+id/CorreoR"
+        app:layout_constraintStart_toStartOf="@+id/CorreoR" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/CorreoR"
         android:layout_width="0dp"
         android:layout_height="41dp"
         android:layout_marginStart="54dp"
@@ -71,8 +71,10 @@
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView9"
@@ -81,17 +83,18 @@
         android:layout_marginBottom="12dp"
         android:text="Contraseña"
         android:textColor="#C61438"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2" />
+        app:layout_constraintBottom_toTopOf="@+id/ContraseñaR"
+        app:layout_constraintStart_toStartOf="@+id/ContraseñaR" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/ContraseñaR"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginStart="54dp"
         android:layout_marginEnd="54dp"
         android:ems="10"
         android:inputType="textPassword"
+        app:passwordToggleEnabled = "true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
