--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,10 +70,10 @@
         android:layout_marginBottom="68dp"
         android:text="¿No tienes una cuenta?"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView4" />
+        app:layout_constraintEnd_toStartOf="@+id/textView_register_now" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView_register_now"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="60dp"
