--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -44,7 +44,7 @@
         tools:layout_editor_absoluteY="620dp" />
 
     <EditText
-        android:id="@+id/ContraseñaR"
+        android:id="@+id/editText_password_register"
         android:layout_width="303dp"
         android:layout_height="55dp"
         android:ems="10"
@@ -63,7 +63,7 @@
         tools:layout_editor_absoluteY="303dp" />
 
     <EditText
-        android:id="@+id/CorreoR"
+        android:id="@+id/editText_email_register"
         android:layout_width="303dp"
         android:layout_height="41dp"
         android:ems="10"
@@ -81,7 +81,7 @@
         tools:layout_editor_absoluteY="411dp" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre"
@@ -90,7 +90,7 @@
         tools:layout_editor_absoluteY="218dp" />
 
     <EditText
-        android:id="@+id/nombre"
+        android:id="@+id/editText_name_register"
         android:layout_width="303dp"
         android:layout_height="41dp"
         android:ems="10"
