--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -10,48 +10,63 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="80dp"
         android:text="Registrarse"
         android:textColor="#000"
         android:textSize="30sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="80dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="99dp"
         android:layout_height="55dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/btn_bg"
         android:text="Siguiente"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="515dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_email_register" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="54dp"
         android:text="¿Ya tienes una cuenta?"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="620dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="49dp"
+        android:layout_marginBottom="92dp"
         android:text="Inicia Sesión "
         android:textColor="#C61438"
-        tools:layout_editor_absoluteX="245dp"
-        tools:layout_editor_absoluteY="620dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView6" />
 
     <EditText
         android:id="@+id/editText_password_register"
-        android:layout_width="303dp"
+        android:layout_width="0dp"
         android:layout_height="55dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="53dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:passwordToggleEnabled="true"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="322dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_name_register"
+        app:passwordToggleEnabled="true" />
 
     <TextView
         android:id="@+id/textView9"
@@ -59,43 +74,52 @@
         android:layout_height="wrap_content"
         android:text="Contraseña"
         android:textColor="#C61438"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintBottom_toTopOf="@+id/editText_password_register"
+        app:layout_constraintStart_toStartOf="@+id/editText_password_register" />
 
     <EditText
         android:id="@+id/editText_email_register"
-        android:layout_width="303dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="54dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="430dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="301dp"
         android:text="Correo Eléctronico"
         android:textColor="#C61438"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="411dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/editText_email_register" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="218dp"
         android:text="Nombre"
         android:textColor="#C61438"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="218dp" />
+        app:layout_constraintStart_toStartOf="@+id/editText_name_register"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText_name_register"
-        android:layout_width="303dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="54dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="230dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
