--- a/app/src/main/res/layout/activity_organizacion.xml
+++ b/app/src/main/res/layout/activity_organizacion.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity_Organizacion">
+    tools:context=".OrganizacionActivity">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/Usuari"
+        app:srcCompat="@drawable/usuario"
         tools:srcCompat="@drawable/img" />
 
     <TextView
