--- a/app/src/main/res/layout/activity_buscar_usuario.xml
+++ b/app/src/main/res/layout/activity_buscar_usuario.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".buscar_usuario">
+    tools:context=".Buscar_Usuario">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
