--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,6 +42,7 @@
         android:layout_marginEnd="145dp"
         android:background="#E4E4E4"
         android:backgroundTint="#FFFFFF"
+        android:onClick="mapas"
         android:text=" Puntos de recoleccón"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
